--- a/tacker/db/migration/README
+++ b/tacker/db/migration/README
@@ -15,56 +15,56 @@
 # @author Mark McClain (DreamHost)
 
 The migrations in the alembic/versions contain the changes needed to migrate
-from older Neutron releases to newer versions. A migration occurs by executing
+from older Tacker releases to newer versions. A migration occurs by executing
 a script that details the changes needed to upgrade/downgrade the database. The
 migration scripts are ordered so that multiple scripts can run sequentially to
-update the database. The scripts are executed by Neutron's migration wrapper
-which uses the Alembic library to manage the migration.  Neutron supports
+update the database. The scripts are executed by Tacker's migration wrapper
+which uses the Alembic library to manage the migration.  Tacker supports
 migration from Folsom or later.
 
 
 If you are a deployer or developer and want to migrate from Folsom to Grizzly
 or later you must first add version tracking to the database:
 
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
  --config-file /path/to/plugin/config.ini stamp folsom
 
 You can then upgrade to the latest database version via:
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
  --config-file /path/to/plugin/config.ini upgrade head
 
 To check the current database version:
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
  --config-file /path/to/plugin/config.ini current
 
 To create a script to run the migration offline:
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
  --config-file /path/to/plugin/config.ini upgrade head --sql
 
 To run the offline migration between specific migration versions:
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
 --config-file /path/to/plugin/config.ini upgrade \
 <start version>:<end version> --sql
 
 Upgrade the database incrementally:
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
 --config-file /path/to/plugin/config.ini upgrade --delta <# of revs>
 
 Downgrade the database by a certain number of revisions:
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
 --config-file /path/to/plugin/config.ini downgrade --delta <# of revs>
 
 
 DEVELOPERS:
-A database migration script is required when you submit a change to Neutron
+A database migration script is required when you submit a change to Tacker
 that alters the database model definition.  The migration script is a special
 python file that includes code to update/downgrade the database to match the
 changes in the model definition. Alembic will execute these scripts in order to
-provide a linear migration path between revision. The neutron-db-manage command
+provide a linear migration path between revision. The tacker-db-manage command
 can be used to generate migration template for you to complete.  The operations
 in the template are those supported by the Alembic migration library.
 
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
 --config-file /path/to/plugin/config.ini revision \
 -m "description of revision" \
 --autogenerate
@@ -77,16 +77,16 @@ In rare circumstances, you may want to start with an empty migration template
 and manually author the changes necessary for an upgrade/downgrade.  You can
 create a blank file via:
 
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
 --config-file /path/to/plugin/config.ini revision \
 -m "description of revision"
 
 The migration timeline should remain linear so that there is a clear path when
 upgrading/downgrading.  To verify that the timeline does branch, you can run
 this command:
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
 --config-file /path/to/plugin/config.ini check_migration
 
 If the migration path does branch, you can find the branch point via:
-$ neutron-db-manage --config-file /path/to/neutron.conf \
+$ tacker-db-manage --config-file /path/to/tacker.conf \
 --config-file /path/to/plugin/config.ini history
